--- a/hbase/hbase-customwrapper-5.0/pom.xml
+++ b/hbase/hbase-customwrapper-5.0/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
     <artifactId>denodo-hbase-customwrapper-5.0</artifactId>
-    <version>20130708</version>
+    <version>20130910</version>
     <packaging>jar</packaging>
     <name>denodo-hbase-customwrapper</name>
 
@@ -169,6 +169,12 @@
     <!-- ****************************************************************** -->
     <dependencies>
         <!-- Custom Wrapper necessary libraries -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.15</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>com.denodo.commons</groupId>
             <artifactId>denodo-util</artifactId>
