--- a/hdfs/hdfs-lib/pom.xml
+++ b/hdfs/hdfs-lib/pom.xml
@@ -8,13 +8,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
     <artifactId>denodo-hdfs-lib</artifactId>
-    <version>20130902</version>
+    <version>20140808</version>
     <packaging>jar</packaging>
     <name>denodo-hdfs-lib</name>
 
     <properties>
-        <avro.version>1.7.2</avro.version>
-        <hadoop.version>1.1.2</hadoop.version>
+        <avro.version>1.7.4</avro.version>
+        <hadoop.version>2.4.0</hadoop.version>
     </properties>
 
     <!-- *************************** -->
@@ -151,10 +151,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
-                
+
         <dependency>
             <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-core</artifactId>
+            <artifactId>hadoop-common</artifactId>
             <version>${hadoop.version}</version>
             <exclusions>
                 <exclusion>
@@ -170,8 +170,12 @@
                     <artifactId>commons-el</artifactId>
                 </exclusion>
                 <exclusion>
+                  <groupId>commons-logging</groupId>
+                  <artifactId>commons-logging-api</artifactId>
+                </exclusion>
+                <exclusion>
                     <groupId>org.apache.commons</groupId>
-                    <artifactId>commons-math</artifactId>
+                    <artifactId>commons-math3</artifactId>
                 </exclusion>
                 <exclusion>
                     <groupId>tomcat</groupId>
@@ -198,24 +202,64 @@
                     <artifactId>jetty-util</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.mortbay.jetty</groupId>
-                    <artifactId>jsp-2.1</artifactId>
+                  <groupId>com.sun.jersey</groupId>
+                  <artifactId>jersey-core</artifactId>
+                </exclusion>
+                <exclusion>
+                  <groupId>com.sun.jersey</groupId>
+                  <artifactId>jersey-json</artifactId>
+                </exclusion>
+                <exclusion>
+                  <groupId>com.sun.jersey</groupId>
+                  <artifactId>jersey-server</artifactId>
+                </exclusion>
+                <exclusion>
+                  <groupId>org.aspectj</groupId>
+                  <artifactId>aspectjrt</artifactId>
+                </exclusion>
+                <exclusion>
+                  <groupId>net.java.dev.jets3t</groupId>
+                  <artifactId>jets3t</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-hdfs</artifactId>
+            <version>${hadoop.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-cli</groupId>
+                    <artifactId>commons-cli</artifactId>
+                </exclusion>
+                <exclusion>
+                  <groupId>commons-daemon</groupId>
+                  <artifactId>commons-daemon</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>tomcat</groupId>
+                    <artifactId>jasper-runtime</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>servlet-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.servlet.jsp</groupId>
+                    <artifactId>jsp-api</artifactId>
                 </exclusion>
                 <exclusion>
                     <groupId>org.mortbay.jetty</groupId>
-                    <artifactId>jsp-api-2.1</artifactId>
+                    <artifactId>jetty</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.eclipse.jdt</groupId>
-                    <artifactId>core</artifactId>
+                    <groupId>org.mortbay.jetty</groupId>
+                    <artifactId>jetty-util</artifactId>
                 </exclusion>
                 <exclusion>
                     <groupId>hsqldb</groupId>
                     <artifactId>hsqldb</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>net.java.dev.jets3t</groupId>
-                    <artifactId>jets3t</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -226,11 +270,11 @@
             <version>5.0.0_2</version>
             <scope>provided</scope>
         </dependency>
-        
+
         <dependency>
             <groupId>net.java.dev.jets3t</groupId>
             <artifactId>jets3t</artifactId>
-            <version>0.7.4</version>
+            <version>0.9.0</version>
             <scope>compile</scope>
         </dependency>
 
