--- a/hdfs/hdfs-customwrapper-5.0/pom.xml
+++ b/hdfs/hdfs-customwrapper-5.0/pom.xml
@@ -76,13 +76,45 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-jar-plugin</artifactId>
+              <version>2.4</version>
+              <configuration>
+                <archive>
+                  <addMavenDescriptor>false</addMavenDescriptor>
+                  <manifestSections>
+                    <manifestSection>
+                      <name>com.denodo</name>
+                      <manifestEntries>
+                        <Extension-Name>${project.artifactId}</Extension-Name>
+                        <Extension-Description>${project.name}</Extension-Description>
+                        <Extension-Version>${project.version}</Extension-Version>
+                        <Extension-Target-Version>5.0</Extension-Target-Version>
+                        <Extension-Target-Update>20140808</Extension-Target-Update>
+                        <Extension-Website>http://support.denodo.com</Extension-Website>
+                      </manifestEntries>
+                    </manifestSection>
+                  </manifestSections>
+                </archive>
+              </configuration>
+            </plugin>            
         
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>2.3</version>
                 <configuration>
-                     <finalName>denodo-hdfs-customwrapper-5.0-${project.version}-jar-with-dependencies</finalName>
+                     <finalName>${project.artifactId}-${project.version}-jar-with-dependencies</finalName>
+                    <filters>
+                      <filter>
+                        <artifact>*:*</artifact>
+                        <excludes>
+                          <exclude>META-INF/maven/**/*</exclude>
+                        </excludes>
+                      </filter>
+                    </filters>                     
                 </configuration>
                 <executions>
                     <execution>
