--- a/mapreduce/mapreduce-customwrapper-5.0/pom.xml
+++ b/mapreduce/mapreduce-customwrapper-5.0/pom.xml
@@ -7,12 +7,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
     <artifactId>denodo-mapreduce-customwrapper-5.0</artifactId>
-    <version>20131001</version>
+    <version>20140811</version>
     <packaging>jar</packaging>
     <name>denodo-mapreduce-customwrapper</name>
 
   <properties>
-    <hadoop.version>1.1.2</hadoop.version>
+        <hadoop.version>2.4.0</hadoop.version>
   </properties>
 
 
@@ -83,7 +83,7 @@
                     </execution>
                 </executions>
             </plugin>
-
+            
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-jar-plugin</artifactId>
@@ -99,27 +99,21 @@
                         <Extension-Description>${project.name}</Extension-Description>
                         <Extension-Version>${project.version}</Extension-Version>
                         <Extension-Target-Version>5.0</Extension-Target-Version>
-                        <Extension-Target-Update>20130103</Extension-Target-Update>
+                        <Extension-Target-Update>20140808</Extension-Target-Update>
                         <Extension-Website>http://support.denodo.com</Extension-Website>
                       </manifestEntries>
                     </manifestSection>
                   </manifestSections>
                 </archive>
               </configuration>
-            </plugin>
+            </plugin>                        
 
             <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-shade-plugin</artifactId>
-              <version>2.3</version>
-              <executions>
-                <execution>
-                  <phase>package</phase>
-                  <goals>
-                    <goal>shade</goal>
-                  </goals>
-                  <configuration>
-                    <outputFile>target/${project.artifactId}-${project.version}-jar-with-dependencies.jar</outputFile>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                     <finalName>${project.artifactId}-${project.version}-jar-with-dependencies</finalName>
                     <filters>
                       <filter>
                         <artifact>*:*</artifact>
@@ -127,10 +121,57 @@
                           <exclude>META-INF/maven/**/*</exclude>
                         </excludes>
                       </filter>
-                    </filters>
-                  </configuration>
-                </execution>
-              </executions>
+                    </filters>                                          
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                            <!--Symptom: 
+                                Custom wrapper throws "IOException: No FileSystem for scheme: 
+                                hdfs" because differents JARs (hadoop-commons for LocalFileSystem, hadoop-hdfs 
+                                for DistributedFileSystem) each contain a different file called org.apache.hadoop.fs.FileSystem 
+                                in their META-INFO/services directory. When we use maven-assembly, it merges 
+                                all our JARs into one, and all META-INFO/services/org.apache.hadoop.fs.FileSystem 
+                                overwrite each-other. Only one of these files remains (the last one that 
+                                was added). In this case, the Filesystem list from hadoop-commons overwrites 
+                                the list from hadoop-hdfs, so DistributedFileSystem was no longer declared. 
+                                
+                                Solution: 
+                                Use maven-shade plugin to merge services files when building JAR 
+                                with dependencies -->
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.2-beta-5</version>
+                <executions>
+                    <execution>
+                        <id>make-assembly-dist</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>attached</goal>
+                        </goals>
+                        <configuration>
+                            <descriptors>
+                                <descriptor>${basedir}/src/main/assembly/dist.xml</descriptor>
+                            </descriptors>
+                            <appendAssemblyId>true</appendAssemblyId>
+                            <finalName>denodo-mapreduce-customwrapper-5.0-${project.version}</finalName>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
 
             <plugin>
@@ -181,7 +222,7 @@
 
         <dependency>
             <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-core</artifactId>
+            <artifactId>hadoop-common</artifactId>
             <version>${hadoop.version}</version>
             <exclusions>
                 <exclusion>
@@ -197,8 +238,12 @@
                     <artifactId>commons-el</artifactId>
                 </exclusion>
                 <exclusion>
+                  <groupId>commons-logging</groupId>
+                  <artifactId>commons-logging-api</artifactId>
+                </exclusion>                
+                <exclusion>
                     <groupId>org.apache.commons</groupId>
-                    <artifactId>commons-math</artifactId>
+                    <artifactId>commons-math3</artifactId>
                 </exclusion>
                 <exclusion>
                     <groupId>tomcat</groupId>
@@ -225,28 +270,27 @@
                     <artifactId>jetty-util</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.mortbay.jetty</groupId>
-                    <artifactId>jsp-2.1</artifactId>
+                  <groupId>com.sun.jersey</groupId>
+                  <artifactId>jersey-core</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.mortbay.jetty</groupId>
-                    <artifactId>jsp-api-2.1</artifactId>
+                  <groupId>com.sun.jersey</groupId>
+                  <artifactId>jersey-json</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.eclipse.jdt</groupId>
-                    <artifactId>core</artifactId>
+                  <groupId>com.sun.jersey</groupId>
+                  <artifactId>jersey-server</artifactId>
+                </exclusion>                
+                <exclusion>
+                  <groupId>org.aspectj</groupId>
+                  <artifactId>aspectjrt</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>hsqldb</groupId>
-                    <artifactId>hsqldb</artifactId>
+                  <groupId>net.java.dev.jets3t</groupId>
+                  <artifactId>jets3t</artifactId>
                 </exclusion>
-                <exclusion>
-                    <groupId>net.java.dev.jets3t</groupId>
-                    <artifactId>jets3t</artifactId>
-                </exclusion>
-            </exclusions>
+            </exclusions>                        
         </dependency>
-
 
 	  	<dependency>
 	    	<groupId>commons-lang</groupId>
@@ -263,9 +307,22 @@
         <dependency>
             <groupId>com.denodo.connect.hadoop</groupId>
             <artifactId>denodo-hdfs-lib</artifactId>
-            <version>20130902</version>
+            <version>20140811</version>
             <scope>compile</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.9-RC1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>dom4j</groupId>
+                    <artifactId>dom4j</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>        
+
     </dependencies>
 
 
