--- a/hbase/hbase-customwrapper-5.0/pom.xml
+++ b/hbase/hbase-customwrapper-5.0/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
     <artifactId>denodo-hbase-customwrapper-5.0</artifactId>
-    <version>20140805</version>
+    <version>20140821</version>
     <packaging>jar</packaging>
     <name>denodo-hbase-customwrapper</name>
 
@@ -17,40 +17,6 @@
         <hbase.version>0.96.2-hadoop2</hbase.version>
         <zookeeper.version>3.4.5</zookeeper.version>
     </properties>
-    <repositories>
-        <repository>
-            <id>cloudera</id>
-            <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
-        </repository>
-    </repositories>
-    <profiles>
-        <profile>
-            <id>denodo-ma</id>
-            <build>
-                <resources>
-                    <!-- ========================================================== -->
-                    <!-- Configuration (src/main/conf/denodo-ma) -->
-                    <!-- ========================================================== -->
-                    <resource>
-                        <directory>src/main/conf/denodo-ma</directory>
-                    </resource>
-                </resources>
-            </build>
-        </profile>
-        <profile>
-            <id>pro</id>
-            <build>
-                <resources>
-                    <!-- ========================================================== -->
-                    <!-- Configuration (src/main/conf/denodo-ma) -->
-                    <!-- ========================================================== -->
-                    <resource>
-                        <directory>src/main/conf/pro</directory>
-                    </resource>
-                </resources>
-            </build>
-        </profile>
-    </profiles>
 
     <!-- *************************** -->
     <!-- BUILD INFO -->
@@ -96,6 +62,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
@@ -204,7 +171,6 @@
     <!-- DEPENDENCIES -->
     <!-- ****************************************************************** -->
     <dependencies>
-
         <!-- Custom Wrapper necessary libraries -->
         <dependency>
             <groupId>log4j</groupId>
@@ -302,7 +268,7 @@
                 <exclusion>
                   <groupId>com.sun.jersey</groupId>
                   <artifactId>jersey-server</artifactId>
-                </exclusion>
+                </exclusion>                
                 <exclusion>
                   <groupId>org.aspectj</groupId>
                   <artifactId>aspectjrt</artifactId>
@@ -366,12 +332,30 @@
         	<groupId>org.apache.thrift</groupId>
         	<artifactId>libfb303</artifactId>
         	<version>0.9.0</version>
-        </dependency>
-
+        </dependency>        
+        
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20090211</version>
         </dependency>
+        
+        <dependency>
+            <groupId>com.denodo.connect.hadoop</groupId>
+            <artifactId>denodo-hdfs-lib</artifactId>
+            <version>20140811</version>
+            <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                     <groupId>org.apache.avro</groupId>
+                    <artifactId>avro-mapred</artifactId>
+                </exclusion>               
+                <exclusion>
+                     <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-hdfs</artifactId>
+                </exclusion>            
+            </exclusions>
+        </dependency>
+        
     </dependencies>
 </project>
