--- a/hdfs/hdfs-customwrapper-5.5/pom.xml
+++ b/hdfs/hdfs-customwrapper-5.5/pom.xml
@@ -8,13 +8,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
     <artifactId>denodo-hdfs-customwrapper-5.5</artifactId>
-    <version>20170109</version>
+    <version>20170111</version>
     <packaging>jar</packaging>
     <name>denodo-hdfs-customwrapper</name>
 
     <properties>
         <avro.version>1.8.1</avro.version>
-        <hadoop.version>2.6.5</hadoop.version>
+        <hadoop.version>2.7.3</hadoop.version>
     </properties>
 
     <!-- *************************** -->
@@ -360,7 +360,7 @@
         <dependency>
             <groupId>com.denodo.connect.hadoop</groupId>
             <artifactId>denodo-hadoop-commons-5.5</artifactId>
-            <version>20160719</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
 
